Container-Root/eks/deployment/horizontal-pod-autoscaler/hpa-example/load-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: load-generator
  name: load-generator
  namespace: hpa-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: load-generator
  template:
    metadata:
      labels:
        app: load-generator
    spec:
      containers:
      - name: load-generator
        image: busybox
        args:
          - /bin/sh
          - -c
          #- while sleep 0.01; do wget -q -O- http://php-apache; done
          - while sleep 0.01; do wget -q -O- http://traefik.traefik.svc.cluster.local:80/php-apache ; done
          #- while sleep 0.01; do wget -q -O- http://traefik.traefik.svc.cluster.local:80/hpa-example ; done
        imagePullPolicy: Always
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      #restartPolicy: Never
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoExecute
        key: node.kubernetes.io/not-ready
        operator: Exists
        tolerationSeconds: 300
      - effect: NoExecute
        key: node.kubernetes.io/unreachable
        operator: Exists
        tolerationSeconds: 300
