Container-Root/eks/deployment/horizontal-pod-autoscaler/hpa-example/php-apache.yaml
# https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale-walkthrough/
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-apache
  namespace: hpa-example
spec:
  selector:
    matchLabels:
      run: php-apache
  replicas: 1
  template:
    metadata:
      labels:
        run: php-apache
    spec:
      containers:
      - name: php-apache
        image: 516928513568.dkr.ecr.us-west-2.amazonaws.com/php-apache:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: php-apache
  namespace: hpa-example
  labels:
    run: php-apache
spec:
  ports:
  - name: web
    port: 80
  selector:
    run: php-apache
