Container-Root/eks/deployment/horizontal-pod-autoscaler/hpa-example/ingress-bert.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-bert
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - host: "bert.do.aws.dev"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bert-base-multilingual-cased-gpu-0
            port:
              number: 8080
